--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "backend",
+  "name": "codeconnect_backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "node -r dotenv/config src/index.js",
+    "dev": "nodemon -r dotenv/config src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "aryanbhati",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -16,6 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "nodemon": "^3.1.4",
+    "prettier": "^3.3.2"
   }
 }
