--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,8 @@
   "author": "aryanbhati",
   "license": "ISC",
   "dependencies": {
+    "@dicebear/collection": "^9.2.0",
+    "@dicebear/core": "^9.2.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.3.0",
     "cookie-parser": "^1.4.6",
